# ipanon

./: .gitignore  .pre-commit-config.yaml  API.md  CLAUDE.md  LICENSE  README.md  SPEC.md  pyproject.toml
src/ipanon/: __init__.py  anonymizer.py  cli.py  networks.py  permutation.py  ranges.py  scanner.py
tests/: test_anonymizer.py  test_cli.py  test_networks.py  test_permutation.py  test_ranges.py  test_scanner.py
